--- a/MoreMocha/Resources/Base.lproj/Main.storyboard
+++ b/MoreMocha/Resources/Base.lproj/Main.storyboard
@@ -53,10 +53,11 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tsv-VY-bOG">
-                                        <rect key="frame" x="0.0" y="247" width="375" height="220"/>
+                                        <rect key="frame" x="0.0" y="247" width="375" height="233"/>
                                         <subviews>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FmF-g9-4Em">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="220"/>
+                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FmF-g9-4Em">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="208"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="50" minimumInteritemSpacing="0.0" id="lf9-64-SsY">
                                                     <size key="itemSize" width="150" height="150"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -65,14 +66,15 @@
                                                 </collectionViewFlowLayout>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SelectCoffeeCell" id="CJP-A6-lg9" customClass="SelectCoffeeCollectionViewCell" customModule="MoreMocha" customModuleProvider="target">
-                                                        <rect key="frame" x="115" y="35" width="150" height="150"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <rect key="frame" x="115" y="29" width="150" height="150"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
                                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jacobs-wonderbar_46033470694_o.png" translatesAutoresizingMaskIntoConstraints="NO" id="DxD-m2-zco">
                                                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 </imageView>
                                                                 <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="urV-qp-Bag">
                                                                     <rect key="frame" x="69" y="86.5" width="60" height="60"/>
@@ -98,6 +100,7 @@
                                                                 </button>
                                                             </subviews>
                                                         </view>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstItem="DxD-m2-zco" firstAttribute="height" secondItem="CJP-A6-lg9" secondAttribute="height" id="IHu-Lh-37T"/>
                                                             <constraint firstItem="urV-qp-Bag" firstAttribute="centerX" secondItem="DxD-m2-zco" secondAttribute="centerX" multiplier="1.32" id="TJ0-Nt-iZz"/>
@@ -120,20 +123,20 @@
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="FmF-g9-4Em" secondAttribute="trailing" id="0w4-qP-5NK"/>
-                                            <constraint firstAttribute="bottom" secondItem="FmF-g9-4Em" secondAttribute="bottom" id="Avj-42-SBP"/>
+                                            <constraint firstAttribute="bottom" secondItem="FmF-g9-4Em" secondAttribute="bottom" constant="25" id="Avj-42-SBP"/>
                                             <constraint firstItem="FmF-g9-4Em" firstAttribute="leading" secondItem="Tsv-VY-bOG" secondAttribute="leading" id="aWH-cc-Jya"/>
                                             <constraint firstItem="FmF-g9-4Em" firstAttribute="top" secondItem="Tsv-VY-bOG" secondAttribute="top" id="whA-Af-mNb"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z6k-hZ-c0c">
-                                        <rect key="frame" x="0.0" y="467" width="375" height="100"/>
+                                        <rect key="frame" x="0.0" y="480" width="375" height="93.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JqX-g0-ZaX">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="97"/>
+                                                <rect key="frame" x="0.0" y="10" width="375" height="80.5"/>
                                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4L9-El-oAt">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="95"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="88.5"/>
                                                 <fontDescription key="fontDescription" name="ChalkboardSE-Light" family="Chalkboard SE" pointSize="18"/>
                                                 <state key="normal" title="I'LL TAKE IT!">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -147,7 +150,7 @@
                                             <constraint firstAttribute="trailing" secondItem="4L9-El-oAt" secondAttribute="trailing" id="1kI-Av-pio"/>
                                             <constraint firstItem="4L9-El-oAt" firstAttribute="top" secondItem="z6k-hZ-c0c" secondAttribute="top" id="AK7-TI-u7v"/>
                                             <constraint firstAttribute="bottom" secondItem="JqX-g0-ZaX" secondAttribute="bottom" constant="3" id="Fri-CQ-ym6"/>
-                                            <constraint firstItem="JqX-g0-ZaX" firstAttribute="top" secondItem="z6k-hZ-c0c" secondAttribute="top" id="cbK-on-hPj"/>
+                                            <constraint firstItem="JqX-g0-ZaX" firstAttribute="top" secondItem="z6k-hZ-c0c" secondAttribute="top" constant="10" id="cbK-on-hPj"/>
                                             <constraint firstItem="JqX-g0-ZaX" firstAttribute="leading" secondItem="z6k-hZ-c0c" secondAttribute="leading" id="dZX-5b-jDO"/>
                                             <constraint firstAttribute="bottom" secondItem="4L9-El-oAt" secondAttribute="bottom" constant="5" id="jzh-UT-FaW"/>
                                             <constraint firstAttribute="trailing" secondItem="JqX-g0-ZaX" secondAttribute="trailing" id="nl8-sf-MfY"/>
@@ -155,7 +158,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TdU-sP-p44">
-                                        <rect key="frame" x="0.0" y="567" width="375" height="100"/>
+                                        <rect key="frame" x="0.0" y="573.5" width="375" height="93.5"/>
                                         <subviews>
                                             <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ejx-89-1NN">
                                                 <rect key="frame" x="0.0" y="10" width="375" height="50"/>
@@ -183,14 +186,14 @@
                         </subviews>
                         <color key="backgroundColor" red="0.94901960780000005" green="0.74509803919999995" blue="0.01176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="z6k-hZ-c0c" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.15" id="IcE-1k-JAK"/>
+                            <constraint firstItem="z6k-hZ-c0c" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.14" id="IcE-1k-JAK"/>
                             <constraint firstItem="tpT-IA-xXY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LUd-w4-46s"/>
-                            <constraint firstItem="TdU-sP-p44" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.15" id="TLF-dW-tvQ"/>
+                            <constraint firstItem="TdU-sP-p44" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.14" id="TLF-dW-tvQ"/>
                             <constraint firstItem="tpT-IA-xXY" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="To5-Ib-uGX"/>
                             <constraint firstItem="uI3-xh-oa7" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.1" id="cf0-N8-SEW"/>
                             <constraint firstItem="tpT-IA-xXY" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="nOO-HQ-XjB"/>
                             <constraint firstItem="emE-uj-U0V" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.27" id="wh8-oo-ev8"/>
-                            <constraint firstItem="Tsv-VY-bOG" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.33" id="yye-95-n5q"/>
+                            <constraint firstItem="Tsv-VY-bOG" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.35" id="yye-95-n5q"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -198,6 +201,7 @@
                         <outlet property="coffeeDetails" destination="mBP-Iz-9De" id="axc-Bp-kLl"/>
                         <outlet property="coffeeTitle" destination="cMs-lW-yps" id="Eco-oz-3pN"/>
                         <outlet property="selectCoffeeCollectionView" destination="FmF-g9-4Em" id="KhR-6E-8uT"/>
+                        <outlet property="tabBar" destination="Ejx-89-1NN" id="ISn-DP-nkp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
