--- a/MoreMocha/Resources/Base.lproj/Main.storyboard
+++ b/MoreMocha/Resources/Base.lproj/Main.storyboard
@@ -19,16 +19,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tpT-IA-xXY">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="675"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1tk-h8-H6z">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="66.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="67.5"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="emE-uj-U0V">
-                                        <rect key="frame" x="0.0" y="66.5" width="375" height="113.5"/>
+                                        <rect key="frame" x="0.0" y="67.5" width="375" height="115"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MORE MOCHA" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" minimumFontSize="8" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cMs-lW-yps">
-                                                <rect key="frame" x="28" y="59.5" width="319" height="54"/>
+                                                <rect key="frame" x="28" y="61" width="319" height="54"/>
                                                 <fontDescription key="fontDescription" name="ChalkboardSE-Bold" family="Chalkboard SE" pointSize="38"/>
                                                 <nil key="highlightedColor"/>
                                                 <size key="shadowOffset" width="0.0" height="0.0"/>
@@ -41,10 +41,13 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uI3-xh-oa7">
-                                        <rect key="frame" x="0.0" y="180" width="375" height="67"/>
+                                        <rect key="frame" x="0.0" y="182.5" width="375" height="67.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Just One More" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBP-Iz-9De">
                                                 <rect key="frame" x="20" y="25" width="335" height="24.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="24.5" id="OIO-Vd-901"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" name="ChalkboardSE-Light" family="Chalkboard SE" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -58,10 +61,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tsv-VY-bOG">
-                                        <rect key="frame" x="0.0" y="247" width="375" height="233"/>
+                                        <rect key="frame" x="0.0" y="250" width="375" height="236"/>
                                         <subviews>
-                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FmF-g9-4Em">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="208"/>
+                                            <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FmF-g9-4Em">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="221"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="50" minimumInteritemSpacing="0.0" id="lf9-64-SsY">
                                                     <size key="itemSize" width="150" height="150"/>
@@ -70,22 +73,25 @@
                                                     <inset key="sectionInset" minX="115" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 </collectionViewFlowLayout>
                                                 <cells>
-                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SelectCoffeeCell" id="CJP-A6-lg9" customClass="SelectCoffeeCollectionViewCell" customModule="MoreMocha" customModuleProvider="target">
-                                                        <rect key="frame" x="115" y="29" width="150" height="150"/>
+                                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SelectCoffeeCell" id="CJP-A6-lg9" customClass="SelectCoffeeCollectionViewCell" customModule="MoreMocha" customModuleProvider="target">
+                                                        <rect key="frame" x="115" y="35.5" width="150" height="150"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G5A-AY-y2x" userLabel="cupShadowImage">
+                                                                    <rect key="frame" x="40" y="62" width="70" height="70.5"/>
+                                                                </imageView>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jacobs-wonderbar_46033470694_o.png" translatesAutoresizingMaskIntoConstraints="NO" id="DxD-m2-zco">
-                                                                    <rect key="frame" x="5" y="5" width="140" height="140"/>
+                                                                    <rect key="frame" x="2" y="2" width="146" height="133"/>
                                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <userDefinedRuntimeAttributes>
                                                                         <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                                     </userDefinedRuntimeAttributes>
                                                                 </imageView>
                                                                 <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="urV-qp-Bag">
-                                                                    <rect key="frame" x="69" y="86.5" width="60" height="60"/>
+                                                                    <rect key="frame" x="69" y="76" width="60" height="60"/>
                                                                     <color key="backgroundColor" red="0.32933053374290466" green="0.16593506932258606" blue="0.029720708727836609" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="60" id="Wbf-V2-Gyu"/>
@@ -110,15 +116,20 @@
                                                         </view>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
-                                                            <constraint firstItem="DxD-m2-zco" firstAttribute="top" secondItem="CJP-A6-lg9" secondAttribute="top" constant="5" id="4fF-ic-nzo"/>
-                                                            <constraint firstAttribute="trailing" secondItem="DxD-m2-zco" secondAttribute="trailing" constant="5" id="SpP-Ul-vzj"/>
+                                                            <constraint firstItem="DxD-m2-zco" firstAttribute="top" secondItem="CJP-A6-lg9" secondAttribute="top" constant="2" id="4fF-ic-nzo"/>
+                                                            <constraint firstItem="G5A-AY-y2x" firstAttribute="bottom" secondItem="DxD-m2-zco" secondAttribute="bottom" multiplier="0.98" id="Fig-EM-UIJ"/>
+                                                            <constraint firstAttribute="trailing" secondItem="DxD-m2-zco" secondAttribute="trailing" constant="2" id="SpP-Ul-vzj"/>
                                                             <constraint firstItem="urV-qp-Bag" firstAttribute="centerX" secondItem="DxD-m2-zco" secondAttribute="centerX" multiplier="1.32" id="TJ0-Nt-iZz"/>
-                                                            <constraint firstAttribute="bottom" secondItem="DxD-m2-zco" secondAttribute="bottom" constant="5" id="gAK-Vm-2Uv"/>
-                                                            <constraint firstItem="DxD-m2-zco" firstAttribute="leading" secondItem="CJP-A6-lg9" secondAttribute="leading" constant="5" id="l6o-uf-hrU"/>
+                                                            <constraint firstItem="G5A-AY-y2x" firstAttribute="centerX" secondItem="DxD-m2-zco" secondAttribute="centerX" id="eVa-Uj-e18"/>
+                                                            <constraint firstAttribute="bottom" secondItem="DxD-m2-zco" secondAttribute="bottom" constant="15" id="gAK-Vm-2Uv"/>
+                                                            <constraint firstItem="G5A-AY-y2x" firstAttribute="width" secondItem="DxD-m2-zco" secondAttribute="width" multiplier="0.48" id="jR4-jK-ivT"/>
+                                                            <constraint firstItem="DxD-m2-zco" firstAttribute="leading" secondItem="CJP-A6-lg9" secondAttribute="leading" constant="2" id="l6o-uf-hrU"/>
+                                                            <constraint firstItem="G5A-AY-y2x" firstAttribute="height" secondItem="DxD-m2-zco" secondAttribute="width" multiplier="0.48" id="l72-8a-l77"/>
                                                             <constraint firstItem="urV-qp-Bag" firstAttribute="centerY" secondItem="DxD-m2-zco" secondAttribute="centerY" multiplier="1.55" id="sTW-6n-Kck"/>
                                                         </constraints>
                                                         <connections>
                                                             <outlet property="coffeeImageView" destination="DxD-m2-zco" id="t43-Be-5ct"/>
+                                                            <outlet property="cupShadowImage" destination="G5A-AY-y2x" id="k02-SE-MAs"/>
                                                             <outlet property="customizeButton" destination="urV-qp-Bag" id="6bB-JR-3Dc"/>
                                                         </connections>
                                                     </collectionViewCell>
@@ -130,20 +141,20 @@
                                             </collectionView>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="FmF-g9-4Em" secondAttribute="bottom" constant="25" id="Avj-42-SBP"/>
+                                            <constraint firstAttribute="bottom" secondItem="FmF-g9-4Em" secondAttribute="bottom" constant="15" id="Avj-42-SBP"/>
                                             <constraint firstItem="FmF-g9-4Em" firstAttribute="centerX" secondItem="Tsv-VY-bOG" secondAttribute="centerX" id="M84-Iu-322"/>
                                             <constraint firstItem="FmF-g9-4Em" firstAttribute="top" secondItem="Tsv-VY-bOG" secondAttribute="top" id="whA-Af-mNb"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z6k-hZ-c0c">
-                                        <rect key="frame" x="0.0" y="480" width="375" height="100.5"/>
+                                        <rect key="frame" x="0.0" y="486" width="375" height="101.5"/>
                                         <subviews>
                                             <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JqX-g0-ZaX">
-                                                <rect key="frame" x="0.0" y="4" width="375" height="95.5"/>
+                                                <rect key="frame" x="0.0" y="4" width="375" height="96.5"/>
                                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </view>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4L9-El-oAt">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="100.5"/>
                                                 <fontDescription key="fontDescription" name="ChalkboardSE-Light" family="Chalkboard SE" pointSize="18"/>
                                                 <state key="normal" title="I'LL TAKE IT!">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -165,7 +176,7 @@
                                         </constraints>
                                     </view>
                                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TdU-sP-p44">
-                                        <rect key="frame" x="0.0" y="580.5" width="375" height="86.5"/>
+                                        <rect key="frame" x="0.0" y="587.5" width="375" height="87.5"/>
                                         <subviews>
                                             <tabBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ejx-89-1NN">
                                                 <rect key="frame" x="0.0" y="8" width="375" height="50"/>
@@ -180,7 +191,7 @@
                                                     <tabBarItem systemItem="more" id="Lcm-7g-P7A"/>
                                                 </items>
                                                 <color key="barTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <color key="selectedImageTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="selectedImageTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </tabBar>
                                         </subviews>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
